--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,6 +1,8 @@
 <div class="sobre_mi">
     <div class="title">
-        <h1>Sobre mi</h1>
+        <div class="text-animate2">
+            <h2>Sobre mi</h2>
+        </div>
         <div class="line"></div>
     </div>
 
@@ -47,8 +49,10 @@
 
         <div class="wrapper">
             <h1 class="subtitle">Lo que me gusta</h1>
-            <p>Soy un apasionado explorador de la tecnología, impulsado por una curiosidad insaciable por aprender y crecer.
-                Mi camino en la Ingeniería de Sistemas ha sido una aventura desafiante pero gratificante, donde he cultivad
+            <p>Soy un apasionado explorador de la tecnología, impulsado por una curiosidad insaciable por aprender y
+                crecer.
+                Mi camino en la Ingeniería de Sistemas ha sido una aventura desafiante pero gratificante, donde he
+                cultivad
             </p>
             <div class="container1">
                 <input type="radio" name="slide" id="c1" checked>
