--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -1,6 +1,8 @@
 <div class="resumen">
     <div class="title">
-        <h1>Resumen</h1>
+        <div class="text-animate2">
+            <h2>Resumen</h2>
+        </div>
         <div class="line"></div>
     </div>
     <section class="section">
@@ -87,7 +89,7 @@
             </div>
         </div>
         <div class="habilidades">
-            
+
         </div>
 
     </section>
