--- a/src/app/body/body.component.css
+++ b/src/app/body/body.component.css
@@ -7,9 +7,9 @@
     position: relative;
     top: 0;
     transition: all .5s ease;
-    background: #fff;
+    background: #131313;
     padding: 2rem 3rem 0rem 3rem;
     border-radius: 15px;
-    box-shadow: 0px 0px 10px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 6px 2px rgb(255 255 255 / 17%);
 
 }
