--- a/src/app/resume/resume.component.css
+++ b/src/app/resume/resume.component.css
@@ -9,11 +9,77 @@
 
 
 
+
+.resumen .text-animate2 {
+    width: 10rem;
+    position: relative;
+}
+
+.resumen .text-animate2 h2 {
+    font-size: 2rem;
+    color: transparent;
+    text-align: center;
+    -webkit-text-stroke: 0.1vw #ddd;
+    background: linear-gradient(to top, #ddd, #ffdede);
+    background-repeat: no-repeat;
+    -webkit-background-clip: text;
+    background-position: 0 0;
+    transition: .6s;
+    letter-spacing: 2px;
+    animation: moveText1 5s linear infinite;
+    animation-delay: 1s;
+}
+
+.resumen .text-animate2 h2::before {
+    content: "";
+    position: absolute;
+    left: 1px;
+    height: 100%;
+    border-right: 3px solid #fff;
+    animation: moveCursorText1 5s linear infinite;
+    animation-delay: 1s;
+}
+
+@keyframes moveText1 {
+
+    0%,
+    10%,
+    100% {
+        background-position: -10rem 0;
+    }
+
+    65%,
+    85% {
+        background-position: 0rem 0;
+    }
+}
+
+@keyframes moveCursorText1 {
+
+    0%,
+    10%,
+    100% {
+        width: 0;
+    }
+
+    65%,
+    78%,
+    85% {
+        width: 100%;
+        opacity: 1;
+    }
+
+    75%,
+    85% {
+        opacity: 0;
+    }
+}
+
 .line {
     width: 30%;
     height: 3px;
     margin-left: 20px;
-    background-color: #0e46af;
+    background-color: #fff;
 }
 
 
@@ -43,8 +109,7 @@
 .container .heading {
     text-align: start;
     padding-bottom: 15px;
-    color: #000000;
-    text-shadow: 0 5px 10px rgba(0, 0, 0, 0);
+    color: #fff;
     font-weight: 550;
 
     font-size: 22px;
@@ -56,7 +121,7 @@
     font-size: 22px;
     margin-right: 10px;
     margin-left: 8px;
-    color: #0e46af;
+    color: #00b6ff;
 }
 
 .container .box_container {
@@ -89,19 +154,20 @@
 .container .box_container .box .text .experiencia__calendar i {
     margin-right: 10px;
     margin-bottom: 5px;
+    color: #fff;
 }
 
 
 
 .container .box_container .box h4 {
-    color: #000000;
+    color: #fff;
     font-size: 18px;
-    font-weight: 500;
+    font-weight: 550;
 
 }
 
 .container .box_container .box p {
-    color: #777;
+    color: #a6a6a6;
     font-size: 15px;
     text-align: start;
     margin-bottom: 5px;
@@ -120,19 +186,6 @@
     width: 50%;
 }
 
-.container .box_container .box .btn {
-    margin-top: 10px;
-    display: inline-block;
-    background: #333;
-    color: #fff;
-    font-size: 17px;
-    border-radius: 5px;
-    padding: 8px 25px;
-}
-
-.container .box_container .box .btn .btn:hover {
-    letter-spacing: 1px;
-}
 
 .container .box_container .box:hover {
     box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, .3);
