--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -43,7 +43,7 @@
                         <div class="text">
                             <div class="experiencia__calendar">
                                 <i class="uil uil-calendar-alt"></i>
-                                <p> 2019/Actualmente 7º</p>
+                                <p> 2019 / Actualmente 7º</p>
                             </div>
 
                             <h4>Ingenieria de Sistemas</h4>
@@ -63,7 +63,7 @@
                         <div class="text">
                             <div class="experiencia__calendar">
                                 <i class="uil uil-calendar-alt"></i>
-                                <p> 2022/2023 Finalizado </p>
+                                <p> 2022 / 2023 Finalizado </p>
                             </div>
                             <h4>Auxiliar Frontend </h4>
                             <p>Lineru - Tangelo </p>
@@ -76,7 +76,7 @@
                         <div class="text">
                             <div class="experiencia__calendar">
                                 <i class="uil uil-calendar-alt"></i>
-                                <p> 2022/2023 Finalizado </p>
+                                <p> 2022 / 2023 Finalizado </p>
                             </div>
                             <h4>Auxiliar Qa Analyst </h4>
                             <p>Lineru - Tangelo </p>
@@ -89,7 +89,12 @@
             </div>
         </div>
         <div class="habilidades">
-
+            <div class="title">
+                <div class="text-animate2">
+                    <h2>Habilidades</h2>
+                </div>
+                <div class="line"></div>
+            </div>
         </div>
 
     </section>
