--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -309,27 +309,27 @@ input:checked+label .description {
 
 
 .card[for="c1"] {
-    box-shadow: 0px 0px 4px 1px rgb(255 255 255 / 40%);
+    box-shadow: 0px 0px 10px 1px #323131;
     background-image: url('../../assets//img/montañismo.jpeg');
 
 }
 
 .card[for="c2"] {
-    box-shadow: 0px 0px 4px 1px rgb(255 255 255 / 40%);
+    box-shadow: 0px 0px 10px 1px #323131;
     background-image: url('../../assets//img/space1.jpeg');
 
 
 }
 
 .card[for="c3"] {
-    box-shadow: 0px 0px 4px 1px rgb(255 255 255 / 40%);
+    box-shadow: 0px 0px 10px 1px #323131;
     background-image: url('../../assets//img/musica.jpeg');
 
 
 }
 
 .card[for="c4"] {
-    box-shadow: 0px 0px 4px 1px rgb(255 255 255 / 40%);
+    box-shadow: 0px 0px 10px 1px #323131;
     background-image: url('../../assets//img/tecnologia.jpeg');
 
 }
