--- a/src/app/perfil/perfil.component.css
+++ b/src/app/perfil/perfil.component.css
@@ -25,7 +25,7 @@
 }
 
 .container {
-    background: #131313;
+    background: #000;
     margin: 10px;
     position: fixed;
     z-index: 1;
@@ -37,7 +37,7 @@
     border-radius: 15px;
     flex-direction: column;
     align-items: center;
-    box-shadow: 0px 0px 6px 2px rgb(255 255 255 / 17%);
+    box-shadow: 0px 0px 9px 5px rgb(0 0 0 / 71%);
 
 }
 
@@ -199,6 +199,7 @@ span {
     padding: 10px;
     border-radius: 5px;
     margin: 10px 0 10px 0;
+    cursor: pointer;
 
 }
 
