mejor diseñeo perfil

--- a/src/app/perfil/perfil.component.html
+++ b/src/app/perfil/perfil.component.html
@@ -1,6 +1,6 @@
 <div class="perfil">
 
-   
+
     <div class="container">
         <h1>Leonardo Poveda</h1>
         <span>FullStack</span>
@@ -8,7 +8,7 @@
         <div class="imagen">
             <img src="../../assets/img/leonardo1-removebg-preview (1).png" alt="">
         </div>
-        
+
 
         <div class="social">
             <div class="card">
@@ -47,7 +47,7 @@
                 <i class="ri-map-pin-2-fill map"></i>
                 <div class="info_person">
                     <h6>Ubicacion</h6>
-                    <p>Colombia, Bogota D.C</p>
+                    <p>Bogota D.C, Colombia</p>
                 </div>
 
             </div>
