pòr el momento esta mejor asi

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -99,10 +99,9 @@
             </div>
         </div>
 
-        <!-- <div class="footer">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet labore non quos velit itaque optio
-                sapiente iure natus! Quaerat maiores qui, omnis illum earum reprehenderit eveniet exercitationem quam
-                incidunt asperiores.</p>
-        </div> -->
+
     </section>
+    <div class="footer">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
+    </div>
 </div>
