--- a/src/app/perfil/perfil.component.html
+++ b/src/app/perfil/perfil.component.html
@@ -2,7 +2,9 @@
 
 
     <div class="container">
-        <h1>Leonardo Poveda</h1>
+        <div class="text-animate2">
+            <h1>Leonardo Poveda</h1>
+        </div>
         <span>FullStack</span>
 
         <div class="imagen">
