--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -89,7 +89,7 @@
             </div>
         </div>
         <div class="habilidades">
-            <div class="title">
+            <div class="title1">
                 <div class="text-animate2">
                     <h2>Habilidades</h2>
                 </div>
@@ -98,4 +98,7 @@
         </div>
 
     </section>
+    <div class="footer">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
+    </div>
 </div>
