--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,23 +1,27 @@
 .sobre_mi {
     margin: 0;
+
 }
 
 .title {
     display: flex;
     align-items: center;
+    padding: 2rem 3rem 0rem 3rem;
+
 }
 
 
 .sobre_mi .text-animate2 {
-    width: 10rem;
+    width: 11rem;
     position: relative;
 }
 
 .sobre_mi .text-animate2 h2 {
     font-size: 2rem;
+    font-weight: 800;
     color: transparent;
     text-align: center;
-    -webkit-text-stroke: 0.1vw #ddd;
+    -webkit-text-stroke: 0.01vw #000;
     background: linear-gradient(to top, #ddd, #ffdede);
     background-repeat: no-repeat;
     -webkit-background-clip: text;
@@ -85,6 +89,8 @@
     width: auto;
     display: flex;
     flex-direction: column;
+    padding: 0rem 3rem 0rem 3rem;
+
 }
 
 .section p {
@@ -331,5 +337,25 @@ input:checked+label .description {
 .card[for="c4"] {
     box-shadow: 0px 0px 10px 1px #323131;
     background-image: url('../../assets//img/tecnologia.jpeg');
+
+}
+
+.footer {
+    width: 100%;
+    height: 30px;
+    display: flex;
+    background: #ffffff20;
+    align-items: center;
+    justify-content: center;
+    z-index: 3;
+    margin-top: 25px;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+
+}
+
+.footer p {
+    text-align: center;
+    color: #ccc;
 
 }
