--- a/src/app/body/body.component.css
+++ b/src/app/body/body.component.css
@@ -3,12 +3,13 @@
     height: 100%;
     margin-left: 23rem;
     margin-top: 7rem;
+    margin-bottom: 1rem;
+
     z-index: 1;
     position: relative;
     top: 0;
     transition: all .5s ease;
     background: #000;
-    padding: 2rem 3rem 0rem 3rem;
     border-radius: 15px;
     box-shadow: 0px 0px 9px 5px rgb(0 0 0 / 71%);
 
