--- a/src/app/resume/resume.component.css
+++ b/src/app/resume/resume.component.css
@@ -5,10 +5,16 @@
 .title {
     display: flex;
     align-items: center;
+    padding: 2rem 3rem 0rem 3rem;
+
 }
 
 
+.title1 {
+    display: flex;
+    align-items: center;
 
+}
 
 .resumen .text-animate2 {
     width: 10rem;
@@ -19,7 +25,7 @@
     font-size: 2rem;
     color: transparent;
     text-align: center;
-    -webkit-text-stroke: 0.1vw #ddd;
+    -webkit-text-stroke: 0.01vw #000;
     background: linear-gradient(to top, #ddd, #ffdede);
     background-repeat: no-repeat;
     -webkit-background-clip: text;
@@ -88,6 +94,8 @@
     width: auto;
     display: flex;
     flex-direction: column;
+    padding: 2rem 3rem 0rem 3rem;
+
 }
 
 .section p {
@@ -212,7 +220,7 @@
     font-size: 2rem;
     color: transparent;
     text-align: center;
-    -webkit-text-stroke: 0.1vw #ddd;
+    -webkit-text-stroke: 0.01vw #000;
     background: linear-gradient(to top, #ddd, #ffdede);
     background-repeat: no-repeat;
     -webkit-background-clip: text;
@@ -266,4 +274,27 @@
     85% {
         opacity: 0;
     }
+}
+
+
+
+
+.footer {
+    width: 100%;
+    height: 30px;
+    display: flex;
+    background: #ffffff20;
+    align-items: center;
+    justify-content: center;
+    z-index: 3;
+    margin-top: 25px;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+
+}
+
+.footer p {
+    text-align: center;
+    color: #ccc;
+
 }
