--- a/src/app/perfil/perfil.component.html
+++ b/src/app/perfil/perfil.component.html
@@ -1,18 +1,15 @@
 <div class="perfil">
-
-
     <div class="container">
+        
         <div class="text-animate2">
             <h1>Leonardo Poveda</h1>
         </div>
-        <span>FullStack</span>
+        <!-- <span>FullStack</span> -->
 
         <div class="imagen">
-            <img src="../../assets/img/leonardo1-removebg-preview (1).png" alt="">
+            <img src="../../assets/img/fotoleo1.png" alt="">
         </div>
-
-
-        <div class="social">
+        <!-- <div class="social">
             <div class="card">
                 <a href="#" class="socialContainer containerOne">
                     <i class="ri-linkedin-fill"></i>
@@ -26,8 +23,7 @@
                     <i class="ri-instagram-fill"></i>
                 </a>
             </div>
-        </div>
-
+        </div> -->
         <div class="info">
             <div class="cardperson">
                 <i class="ri-smartphone-line phone"></i>
@@ -35,7 +31,6 @@
                     <h6>Telefono</h6>
                     <p>+57 311 496 3256</p>
                 </div>
-
             </div>
             <div class="cardperson">
                 <i class="ri-mail-open-line email"></i>
@@ -51,7 +46,6 @@
                     <h6>Ubicacion</h6>
                     <p>Bogota D.C, Colombia</p>
                 </div>
-
             </div>
             <div class="cardperson">
                 <i class="ri-gift-line regalo"></i>
@@ -59,13 +53,14 @@
                     <h6>Nacimiento</h6>
                     <p>2001/08/26</p>
                 </div>
-
             </div>
-
         </div>
         <div class="buttons">
             <a download="" href="img/Leonardo Poveda Hoja de vida.pdf" class=" button_flex">
                 Descargar CV <i class="uil uil-arrow-down inicio__scroll-arrow"></i></a>
         </div>
+
+       
+
     </div>
 </div>
