--- a/src/app/body/body.component.css
+++ b/src/app/body/body.component.css
@@ -4,13 +4,12 @@
     margin-left: 23rem;
     margin-top: 7rem;
     margin-bottom: 1rem;
-
     z-index: 1;
     position: relative;
     top: 0;
     transition: all .5s ease;
-    background: #000;
+    background: #0f0d0d;
     border-radius: 15px;
-    box-shadow: 0px 0px 9px 5px rgb(0 0 0 / 71%);
+    box-shadow:0px 0px 6px 2px #5fcdd980;
 
 }
