--- a/src/app/resume/resume.component.css
+++ b/src/app/resume/resume.component.css
@@ -27,7 +27,7 @@
     color: transparent;
     text-align: center;
     -webkit-text-stroke: 0.01vw #000;
-    background: linear-gradient(to top, #ddd, #ffdede);
+    background: linear-gradient(to top, #fff, #fff);
     background-repeat: no-repeat;
     -webkit-background-clip: text;
     background-position: 0 0;
@@ -223,7 +223,7 @@
     color: transparent;
     text-align: center;
     -webkit-text-stroke: 0.01vw #000;
-    background: linear-gradient(to top, #ddd, #ffdede);
+    background: linear-gradient(to top, #fff, #fff);
     background-repeat: no-repeat;
     -webkit-background-clip: text;
     background-position: 0 0;
