--- a/src/app/body/body.component.css
+++ b/src/app/body/body.component.css
@@ -2,7 +2,7 @@
     width: calc(100% - 34rem);
     height: 100%;
     margin-left: 23rem;
-    margin-top: 7rem;
+    margin-top: 1.6rem;
     margin-bottom: 1rem;
     z-index: 1;
     position: relative;
@@ -10,6 +10,6 @@
     transition: all .5s ease;
     background: #0f0d0d;
     border-radius: 15px;
-    box-shadow:0px 0px 6px 2px #5fcdd980;
+    box-shadow: inset  0px 0px 6px 2px #5fcdd980;
 
 }
