--- a/src/app/sidenav/sidenav.component.css
+++ b/src/app/sidenav/sidenav.component.css
@@ -10,7 +10,7 @@
     width: 8rem;
     height: auto;
     border-radius: 15px; 
-    box-shadow:0px 0px 6px 2px #5fcdd980;
+    box-shadow: inset  0px 0px 6px 2px #5fcdd980;
 }
 
 
@@ -38,7 +38,7 @@
     width: 100%;
     height: 100%;
     background: #000;
-    color: #fff;
+    color: wheat;
     border-radius: 15px;
     text-decoration: none;
     overflow: hidden;
@@ -67,7 +67,7 @@
 
 .sidenav_nav .sidenav_nav_item .sidenav_nav_link:hover {
     background: #5fcdd94a;
-    color: #fff;
+    color: wheat;
     width: 100%;
 }
 
@@ -79,14 +79,14 @@
 
 
 .active .sidenav_link_text {
-    color: #fff;
+    color: wheat;
     font-size: 14px;
     font-weight: 700;
 
 }
 
 .active .sidenav_link_icon {
-    color: #fff;
+    color: wheat;
     margin-bottom: 5px;
     font-size: 35px;
     font-weight: 800;
