--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,4 +17,15 @@
                 </a>
             </div>
         </div>
+        <span></span>
+<span></span>
+<span></span>
+<span></span>
+<span></span>
+<span></span>
+<span></span>
+<span></span>
+<span></span>
+<span></span>
 </div>
+
