--- a/src/app/body/body.component.css
+++ b/src/app/body/body.component.css
@@ -2,14 +2,14 @@
     width: calc(100% - 34rem);
     height: 100%;
     margin-left: 23rem;
-    margin-top: 1.6rem;
+    margin-top: 1.5rem;
     margin-bottom: 1rem;
-    z-index: 1;
+    z-index: -1;
     position: relative;
     top: 0;
     transition: all .5s ease;
-    background: #0f0d0d;
+    background: #0e75a912;
     border-radius: 15px;
-    box-shadow: inset  0px 0px 6px 2px #5fcdd980;
+    box-shadow: inset  0px 0px 6px 2px #00e5ff52;
 
 }
