--- a/src/app/sidenav/sidenav.component.css
+++ b/src/app/sidenav/sidenav.component.css
@@ -1,5 +1,5 @@
 .sidenav {
-    background: #0f0d0d;
+    background: #0e75a912;
     margin: 10px;
     transition: all .5s ease;
     position: fixed;
@@ -9,8 +9,8 @@
     right: 10px;
     width: 8rem;
     height: auto;
-    border-radius: 15px; 
-    box-shadow: inset  0px 0px 6px 2px #5fcdd980;
+    border-radius: 15px;
+    box-shadow: inset 0px 0px 6px 2px #00e5ff52;
 }
 
 
@@ -29,7 +29,8 @@
     position: relative;
     height: 5rem;
     width: 100%;
-    margin-bottom: 4px;    transition: all 0.5s ease;
+    margin-bottom: 4px;
+    transition: all 0.5s ease;
 }
 
 .sidenav_nav .sidenav_nav_link {
@@ -45,7 +46,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    box-shadow: inset  0px 0px 6px 2px #5fcdd980;
+    box-shadow: inset 0px 0px 6px 2px #00e5ff52;
 
 }
 
@@ -66,27 +67,30 @@
 }
 
 .sidenav_nav .sidenav_nav_item .sidenav_nav_link:hover {
-    background: #5fcdd94a;
-    color: wheat;
+    background: #ff6a0029;
+    color: #ff6b00;
     width: 100%;
+    box-shadow: inset 0px 0px 6px 2px #ff6b00;
+
 }
 
 .active {
-    background-color: #5fcdd94a !important;
+    background-color: #000 !important;
     transition: all .5s ease;
+    box-shadow: inset 0px 0px 6px 2px #ff6b00 !important;
 
 }
 
 
 .active .sidenav_link_text {
-    color: wheat;
+    color: #ff6b00;
     font-size: 14px;
     font-weight: 700;
 
 }
 
 .active .sidenav_link_icon {
-    color: wheat;
+    color: #ff6b00;
     margin-bottom: 5px;
     font-size: 35px;
     font-weight: 800;
