--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -41,7 +41,7 @@ h2 {
 }
 
 @keyframes wave {
-
+ 
     0%,
     100% {
         clip-path: polygon(0% 47%,
@@ -100,7 +100,7 @@ h2 {
     overflow: hidden;
     text-decoration: none;
     transition-duration: .3s;
-    box-shadow: inset 0 0 5px 0.5px #00e5ff52;
+    box-shadow: inset 0px 0px 5px 1px #ff6b00;
 
 }
 
