--- a/src/app/perfil/perfil.component.html
+++ b/src/app/perfil/perfil.component.html
@@ -56,7 +56,7 @@
             </div>
         </div>
         <div class="buttons">
-            <a download="" href="img/Leonardo Poveda Hoja de vida.pdf" class=" button_flex">
+            <a download="" href="../../assets/img/Leonardo Poveda Hv1.pdf" class=" button_flex">
                 Descargar CV <i class="uil uil-arrow-down inicio__scroll-arrow"></i></a>
         </div>
 
