se modifico diseño y arreglo del titulo sobre mi

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,5 +1,5 @@
 .header {
-    background: #0e75a912;
+    background: #00090f;
     margin: 10px;
     transition: all .5s ease;
     position: relative;
