--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -11,17 +11,73 @@
 }
 
 
+
+
 .sobre_mi .text-animate2 {
-    width: 11rem;
+    width: 10.5rem;
     position: relative;
 }
 
 .sobre_mi .text-animate2 h2 {
     font-size: 2rem;
     font-weight: 800;
-    color: #fff;
+    color: transparent;
     text-align: center;
-    
+    -webkit-text-stroke: 0.01vw #000;
+    background: linear-gradient(to top, #fff, #fff);
+    background-repeat: no-repeat;
+    -webkit-background-clip: text;
+    background-position: 0 0;
+    transition: .6s;
+    letter-spacing: 2px;
+    animation: moveText1 5s linear infinite;
+    animation-delay: 1s;
+}
+
+.sobre_mi .text-animate2 h2::before {
+    content: "";
+    position: absolute;
+    top: 8px;
+    left: 1px;
+    height: 28px;
+    border-right: 3px solid #fff;
+    animation: moveCursorText1 5s linear infinite;
+    animation-delay: 1s;
+}
+
+@keyframes moveText1 {
+
+    0%,
+    10%,
+    100% {
+        background-position: -11rem 0;
+    }
+
+    65%,
+    85% {
+        background-position: 0rem 0;
+    }
+}
+
+@keyframes moveCursorText1 {
+
+    0%,
+    10%,
+    100% {
+        width: 0;
+    }
+
+    65%,
+    78%,
+    85% {
+        width: 100%;
+        opacity: 1;
+    }
+
+    75%,
+    85% {
+        opacity: 0;
+    }
 }
 
 .line {
